# simplicial

./: .coveragerc  .coveralls.yaml  .gitignore  .gitmodules  README.md  coverage.json  pyproject.toml  report.txt  requirements.txt  setup.py
.benchmarks/Darwin-CPython-3.10-64bit/: 0001_74ff93347ad97eb97c308bfc3fb5f78bcf8ac7e9_20230303_154243.json  0002_74ff93347ad97eb97c308bfc3fb5f78bcf8ac7e9_20230303_154428_uncommited-changes.json  0003_75d4b5dd58bc70254ad45f525cfbbbcae7ef5178_20230303_190108_uncommited-changes.json  0004_75d4b5dd58bc70254ad45f525cfbbbcae7ef5178_20230303_191431_uncommited-changes.json  0005_6fc5b1594d203460e2b5d75380fced1efd0cbdd5_20230303_191600.json  0006_0.1.5.json  0007_10493c92871772803e685906901449036d34bfa9_20230306_150057.json  0007_a87ed28d05a9f83a44062b8582b986013c08db8b_20230303_194445_uncommited-changes.json  0008_10493c92871772803e685906901449036d34bfa9_20230306_165146_uncommited-changes.json  0008_a87ed28d05a9f83a44062b8582b986013c08db8b_20230303_195004_uncommited-changes.json  0009_180560978a45b03600e76a78c2f8c3f77a0cc097_20230303_200204_uncommited-changes.json  0009_8cd95b47c32364769e9be05edcae2d4cf65deff2_20230414_180700_uncommited-changes.json  0010_180560978a45b03600e76a78c2f8c3f77a0cc097_20230303_200313_uncommited-changes.json  0010_8cd95b47c32364769e9be05edcae2d4cf65deff2_20230414_190832_uncommited-changes.json  0011_180560978a45b03600e76a78c2f8c3f77a0cc097_20230303_200403_uncommited-changes.json  0011_8cd95b47c32364769e9be05edcae2d4cf65deff2_20230414_191329_uncommited-changes.json  0012_180560978a45b03600e76a78c2f8c3f77a0cc097_20230303_200422_uncommited-changes.json  (+31 more)
.github/workflows/: linux  (+7 more)
API/: ComplexLike.md  FiltrationLike.md  SetLike.md
docs/: API.md  MdRendererExt.py  __init__.py  _config.yml  _quarto.yml  _renderer.py  _toc.yml  api.rst  conf.py  design.html  design.md  design.qmd  functions.md  gen_api_custom.py  gen_api_custom2.py  index.ipynb  index.md  index.qmd  meta.rst  np_renderer.py  objects.json  overview.html  overview.md  renderers.py  representations.md  requirements.txt  search.json  simplex.rst  simplextree.rst  simplextree_ds.md  simplicialcomplex.rst
docs_quarto/: __init__.py  _quarto.yml  conf.py  design.qmd  index.qmd  objects.json  overview.qmd  test.qmd
docs_src/: _quarto.yml  _sidebar.yml  objects.json
include/: laplacian.h
test/: test_results.json
tests/: __init__.py  lcov.info  test_benchmarks.py  test_combinatorial.py  test_complexes.py  test_filters.py  test_filtration_api.py  test_generics.py  test_geometry.py  test_simplex.py  test_simplextree.py  test_simplicial.py  test_sparse.py  test_splex_api.py  test_type_check.py  test_z_benchmarks.py
(+247 files in other folders)
