[build-system]
requires = ["setuptools>=42", "wheel", "numpy", "pybind11"] 
build-backend = "setuptools.build_meta"

# Validate with: validate-pyproject pyproject.toml 
[project]
name = "splex"
authors = [
	{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
version = "0.1.5"
readme = "README.md"
description = "Type-aware package for representing, constructing, and manipulating simplicial complexes and filtrations."
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["TDA"]
dependencies = [
	"pybind11",
	"sortedcontainers",
	"numpy",
	"scipy", 
	"hirola", 
	"more_itertools"
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
patch_without_tag = true

[tool.pytest.ini_options]
addopts = "--benchmark-autosave"
