[build-system]
requires = ["setuptools>=42", "wheel", "numpy", "pybind11"] 
build-backend = "setuptools.build_meta"

# Validate with: validate-pyproject pyproject.toml 
[project]
name = "splex"
authors = [
	{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
version = "0.3.3"
readme = "README.md"
description = "Type-aware package for representing, constructing, and manipulating simplicial complexes and filtrations."
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["TDA"]
dependencies = [
	"numpy",
	"scipy", 
	"hirola", 
	"more_itertools", 
	"sortedcontainers",
	"dataclassy", 
	"combin >= 0.1.6", 
	"simplextree"
]

[project.optional-dependencies]
test = [
	"pytest",
  "pytest-benchmark", 
	"pytest-cov"
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
patch_without_tag = true

[tool.pytest.ini_options]
# addopts = "--benchmark-autosave"
addopts = "--benchmark-skip --benchmark-warmup='off' --benchmark-warmup-iterations=0 --benchmark-min-rounds=1 --benchmark-autosave"
testpaths = ["tests"]